--- a/index.html
+++ b/index.html
@@ -5,101 +5,116 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header> 
-        <nav>
-            <a href="/">WebStudio</a>
-            <ul>
-                <li><a href="/">Студия</a></li>
-                <li><a href="/">Портфолио</a></li>
-                <li><a href="/">Контакты</a></li>
+    <!--Навигация-->
+    <header class="header"> 
+        <nav class="navigation">
+            <a href="./index.html" class="logo">Web<span class="second-logo-color">Studio</span></a>
+            <ul class="header-list">
+                <li class="header-item">
+                    <a href="./index.html" class="header-link-studio">Студия</a></li>
+                <li class="header-item">
+                    <a href="./portfolio.html" class="header-link">Портфолио</a></li>
+                <li class="header-item">
+                    <a href="/" class="header-link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="header-list">
+        <li class="header-item"><a href="mailto:info@devstudio.com" class="header-link-mail">info@devstudio.com</a></li>
+        <li class="header-item"><a href="tel:+380961111111" class="header-link-tel">+38 096 111 11 11</a></li>
         </ul>    
     </header>
     <main>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <!---->
+        <section class="main-section">
+            <h1 class="main-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <button type="button" class="btn">Заказать услугу</button>
         </section>
+        <!---->
         <section>
             <h2 hidden>Особенности</h2>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <ul class="main-list">
+                <li class="main-item">
+                    <h3 class="main-h">Внимание к деталям</h3>
+                <p class="main-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
             </ul>
                 <ul>
-                    <li>
-                        <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <li class="main-item">
+                        <h3 class="main-h">Пунктуальность</h3>
+                    <p class="main-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                 </ul>
                     <ul>
-                        <li>
-                            <h3>Планирование</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <li class="main-item">
+                            <h3 class="main-h">Планирование</h3>
+                        <p class="main-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
                     </ul>
                         <ul>
-                            <li>
-                                <h3>Современные технологии</h3>
-                            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                            <li class="main-item">
+                                <h3 class="main-h">Современные технологии</h3>
+                            <p class="main-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                             </li>
                         </ul>
         </section>
+        <!---->
         <section>
-            <h2>Чем мы занимаемся</h2>
-                <ul>
-                    <li>
+            <h2 class="about">Чем мы занимаемся</h2>
+                <ul class="about-list">
+                    <li class="about-item">
                         <img src="./images/1.jpg" alt="Програмист" width="370" height="294" />
                     </li>
-                    <li>
+                    <li class="about-item">
                         <img src="./images/2.jpg" alt="Верстка" width="370" height="294" />
                     </li>
-                    <li>
+                    <li class="about-item">
                         <img src="./images/3.jpg" alt="Дизайн" width="370" height="294" />
                     </li>
                 </ul>
         </section>
+        <!---->
         <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
+            <h2 class="team">Наша команда</h2>
+            <ul class="team-list">
+                <li class="team-item">
                     <img src="./images/our-team/igor-demyanenko.jpg" alt="фото Игорь Демьяненко" width="270" height="260" />
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p> 
+                    <h3 class="team-name">Игорь Демьяненко</h3>
+                    <p lang="en" class="team-post">Product Designer</p> 
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/our-team/olga-repina.jpg" alt="фото Ольга Репина" width="270" height="260" /> 
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <h3 class="team-name">Ольга Репина</h3>
+                    <p lang="en" class="team-post">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/our-team/nikolay-tarasov.jpg" alt="фото Николай Тарасов" width="270" height="260" />
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <h3 class="team-name">Николай Тарасов</h3>
+                    <p lang="en" class="team-post">Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/our-team/mikhail-ermakov.jpg" alt="фото Михаил Ермаков" width="270" height="260" />
-                    <h3>Михаил Ермаков</h3> 
-                    <p lang="en">UI Designer</p>
+                    <h3 class="team-name">Михаил Ермаков</h3> 
+                    <p lang="en" class="team-post">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-        <footer>
-            <a href="/">WebStudio</a>
-            <address>
-                <a href="https://goo.gl/maps/23fHG1fka5YGRETr7">г. Киев, пр-т Леси Украинки, 26</a>
-                <ul>
-                    <li><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+    <!---->
+        <footer class="footer">
+            <a href="./index.html" class="logo">Web<span class="footer-color-logo">Studio</span></a>
+            <address class="address">
+                <ul class="address-lit">
+                    <li class="address-item"><a href="https://goo.gl/maps/23fHG1fka5YGRETr7" class="footer-address">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="address-item"><a href="mailto:info@example.com" class="fmail">info@example.com</a></li>
+                    <li class="address-item"><a href="tel:+380991111111" class="ftel">+38 099 111 11 11</a></li>
                 </ul>
             </address>
         </footer>
