--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,7 @@
                         <h3 class="main-servies">Проект LAB</h3>
                         <p class="main-description">Маркетинг</p>
                     </li>
-                ``  <li class="main-img">
+                    <li class="main-img">
                         <img src="./images/portfolio/p9.jpg" alt="макбук" width="370" height="294">
                         <h3 class="main-servies">Growing Business</h3>
                         <p class="main-description">Приложение</p>
