--- a/portfolio.html
+++ b/portfolio.html
@@ -31,8 +31,8 @@
                 </ul>
             </nav>
             <ul class="header-list">
-                <li class="header-item"><a href="mailto:info@devstudio.com" class="header-link-mail">info@devstudio.com</a></li>
-                <li class="header-item"><a href="tel:+380961111111" class="header-link-tel">+38 096 111 11 11</a></li>
+        <li class="header-item"><a href="mailto:info@devstudio.com" class="header-link-tel">info@devstudio.com</a></li>
+        <li class="header-item"><a href="tel:+380961111111" class="header-link-tel">+38 096 111 11 11</a></li>
             </ul>
         </header>
         <main>
