--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <footer class="footer">
             <a href="./index.html" class="logo">Web<span class="footer-color-logo">Studio</span></a>
             <address class="address">
-                <ul class="address-lit">
+                <ul class="address-list">
                     <li class="address-item"><a href="https://goo.gl/maps/23fHG1fka5YGRETr7" class="footer-address">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li class="address-item"><a href="mailto:info@example.com" class="fmail">info@example.com</a></li>
                     <li class="address-item"><a href="tel:+380991111111" class="ftel">+38 099 111 11 11</a></li>
