--- a/portfolio.html
+++ b/portfolio.html
@@ -54,53 +54,72 @@
                       <button type="button" class="portfolio-btn">Маркетинг</button> 
                     </li>
                 </ul>
-                <ul>
-                    <li class="main-img">
-                        <img src="./images/portfolio/p1.jpg" alt="технокряк" width="370" height="294">
-                        <h3 class="main-servies">Технокряк</h3>
-                        <p class="main-description">Веб-сайт</p>
-                    </li>
-                    <li class="main-img">
-                        <img src="./images/portfolio/p2.jpg" alt="постер" width="370" height="294">
-                        <h3 class="main-servies">Постер New Orlean vs Golden Star</h3>
-                        <p class="main-description">Дизайн</p>
-                    </li>
-                    <li class="main-img">
-                        <img src="./images/portfolio/p3.jpg" alt="ресторан" width="370" height="294">
-                        <h3 class="main-servies">Ресторан Seafood</h3>
-                        <p class="main-description">Приложение</p>
-                    </li>
-                    <li class="main-img">
-                        <img src="./images/portfolio/p4.jpg" alt="наушники" width="370" height="294">
-                        <h3 class="main-servies">Проект Prime</h3>
-                        <p class="main-description">Маркетинг</p>
-                    </li>
-                    <li class="main-img">
-                        <img src="./images/portfolio/p5.jpg" alt="коробки" width="370" height="294">
-                        <h3 class="main-servies">Проект Boxes</h3>
-                        <p class="main-description">Приложение</p>
-                    </li>
-                    <li class="main-img">
-                        <img src="./images/portfolio/p6.jpg" alt="монитор" width="370" height="294">
-                        <h3 class="main-servies">Inspiration has no Borders</h3>
-                        <p class="main-description">Веб-сайт</p>
-                    </li>
-                    <li class="main-img">
-                        <img src="./images/portfolio/p7.jpg" alt="книга" width="370" height="294">
-                        <h3 class="main-servies">Издание Limited Edition</h3>
-                        <p class="main-description">Дизайн</p>
-                    </li>
-                    <li class="main-img">
-                        <img src="./images/portfolio/p8.jpg" alt="проект" width="370" height="294">
-                        <h3 class="main-servies">Проект LAB</h3>
-                        <p class="main-description">Маркетинг</p>
-                    </li>
-                    <li class="main-img">
-                        <img src="./images/portfolio/p9.jpg" alt="макбук" width="370" height="294">
-                        <h3 class="main-servies">Growing Business</h3>
-                        <p class="main-description">Приложение</p>
-                    </li>
-                </ul>
+                <!--Список работ-->
+        <ul class="portfolio-list">
+            <li class="portfolio-item">
+                <a href="" class="portfolio-link">
+                    <img src="./images/portfolio/p1.jpg" alt="Технокряк" width="370" height="294">
+                    <h3 class="portfolio-title">Технокряк</h3>
+                    <p class="portfolio-text">Веб-сайт</p>
+                </a>
+            </li>
+            <li class="portfolio-item">
+                <a href="" class="portfolio-link">
+                    <img src="./images/portfolio/p2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                    <h3 class="portfolio-title">Постер New Orlean vs Golden- Star</h3>
+                    <p class="portfolio-text">Дизайн</p>
+                </a>
+            </li>
+            <li class="portfolio-item">
+                <a href="" class="portfolio-link">
+                    <img src="./images/portfolio/p3.jpg" alt="Ресторан Seafood" width="370" height="294">
+                    <h3 class="portfolio-title">Ресторан Seafood</h3>
+                    <p class="portfolio-text">Приложение</p>
+                </a>
+            </li>
+            <li class="portfolio-item">
+                <a href="" class="portfolio-link">
+                    <img src="./images/portfolio/p4.jpg" alt="Проект Prime" width="370" height="294">
+                    <h3 class="portfolio-title">Проект Prime</h3>
+                    <p class="portfolio-text">Маркетинг</p>
+                </a>
+            </li>
+            <li class="portfolio-item">
+                <a href="" class="portfolio-link">
+                    <img src="./images/portfolio/p5.jpg" alt="Проект Boxes" width="370" height="294">
+                    <h3 class="portfolio-title">Проект Boxes</h3>
+                    <p class="portfolio-text">Приложение</p>
+                </a>
+            </li>
+            <li class="portfolio-item">
+                <a href="" class="portfolio-link">
+                    <img src="./images/portfolio/p6.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                    <h3 class="portfolio-title">Inspiration has no Borders</h3>
+                    <p class="portfolio-text">Веб-сайт</p>
+                </a>
+            </li>
+            <li class="portfolio-item">
+                <a href="" class="portfolio-link">
+                    <img src="./images/portfolio/p7.jpg" alt="Издание Limited Edition" width="370" height="294">
+                    <h3 class="portfolio-title">Издание Limited Edition</h3>
+                    <p class="portfolio-text">Дизайн</p>
+                </a>
+            </li>
+            <li class="portfolio-item">
+                <a href="" class="portfolio-link">
+                    <img src="./images/portfolio/p8.jpg" alt="Проект LAB" width="370" height="294">
+                    <h3 class="portfolio-title">Проект LAB</h3>
+                    <p class="portfolio-text">Маркетинг</p>
+                </a>
+            </li>
+            <li class="portfolio-item">
+                <a href="" class="portfolio-link">
+                    <img src="./images/portfolio/p9.jpg" alt="Growing Business" width="370" height="294">
+                    <h3 class="portfolio-title">Growing Business</h3>
+                    <p class="portfolio-text">Приложение</p>
+                </a>
+            </li>
+        </ul>
             </section>
         </main>
     <footer class="footer">
@@ -109,8 +128,8 @@
             <ul class="address-lit">
                 <li class="address-item"><a href="https://goo.gl/maps/23fHG1fka5YGRETr7" class="footer-address">г. Киев,
                         пр-т Леси Украинки, 26</a></li>
-                <li class="address-item"><a href="mailto:info@example.com" class="fmail">info@example.com</a></li>
-                <li class="address-item"><a href="tel:+380991111111" class="ftel">+38 099 111 11 11</a></li>
+                <li class="address-item"><a href="mailto:info@example.com" class="fcontact">info@example.com</a></li>
+                <li class="address-item"><a href="tel:+380991111111" class="fcontact">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
