--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             <address class="address">
                 <ul class="address-list">
                     <li class="address-item"><a href="https://goo.gl/maps/23fHG1fka5YGRETr7" class="footer-address">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li class="address-item"><a href="mailto:info@example.com" class="fmail">info@example.com</a></li>
-                    <li class="address-item"><a href="tel:+380991111111" class="ftel">+38 099 111 11 11</a></li>
+                    <li class="address-item"><a href="mailto:info@example.com" class="fcontact">info@example.com</a></li>
+                    <li class="address-item"><a href="tel:+380991111111" class="fcontact">+38 099 111 11 11</a></li>
                 </ul>
             </address>
         </footer>
